--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "4.18.5",
     "bootstrap": "5.1.3",
     "react": "17.0.2",
+    "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0",
     "reactstrap": "9.0.1"
