--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@ant-design/icons": "4.7.0",
     "antd": "4.18.5",
     "bootstrap": "5.1.3",
     "react": "17.0.2",
